# ITTAPK

./: .gitignore  README.md
Chris/Codeexamples/: Makefile
Chris/Codeexamples/ITTAPK-master/L6-Boost/VariantVisitation/: CMakeLists.txt  main.cpp
Chris/Codeexamples/SharedPointer/: SharedPointer.sln  SharedPointer.vcxproj  SharedPtr.h
Chris/ITAPK/exe5/TimerCallback/: Events.hpp  (+5 more)
Mads/u39_bind_visit_/: Bindfunction.cpp  Events.hpp  Timer.cpp  Timer.hpp  prog
Mads/u41_threads/: async_algo.cpp
Mads/u43_meta_1/: Exe2.cpp
Path of Destiny - ITTAPK Projekt E18/: ClassDiagramPoD.uxf  Emner.docx  cd_PathOfDestiny.uxf  sd_PathOfDestiny.uxf
Path of Destiny - ITTAPK Projekt E18/Code/: Arena.hpp  CosTypes.hpp  CostumeTypes.hpp  EnemyList.hpp  Gear.hpp  Hero.hpp  Humanoid.hpp  Location.hpp  Main.cpp  Makefile  Monster.hpp  Opponent.hpp  OpponentFactory.hpp  Path.hpp  PathOfDestiny.hpp  action.hpp  gearMain.cpp  opponentMain.cpp  prog  testMain.cpp
Path of Destiny - ITTAPK Projekt E18/Code/MJ/: CosTypes.hpp  Gear.hpp  Hero.hpp
Richard/Exercise 1-3/SharedPtr/: main.cpp  shared_ptr.hpp
Richard/Exercise 4/: algo.cpp  product.db
Richard/Exercise 5/: Signals.cpp
Richard/Exercise 5/TimerCallback/: Bindfunction.cpp  CMakeCache.txt  CMakelists.txt  Makefile  Timer.cpp  Timer.hpp  cmake_install.cmake
Richard/Exercise 6/: code_snippet_1.1.1.cpp
Richard/Exercise 6/MyVector/: MyVector.h  main.cpp
Richard/Exercise 8/TypeLists/: main.cpp
Richard/My Stuff/: main.cpp
Richard/My Stuff/Test/: Armor.h  Test.sln  Weapon.h
Richard/My Stuff/VS_Studio_c++/: VS_Studio_c++.sln
(+65 files in other folders)
